# cpp-render-playground

./: CMakeLists.txt
src/: main.cpp
src/AmbientLight/: AmbientLight.cpp  AmbientLight.h
src/Camera/: Camera.cpp  Camera.h
src/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
src/HitRecord/: HitRecord.h
src/IdealDiffuseMaterial/: IdealDiffuseMaterial.cpp  IdealDiffuseMaterial.h
src/Image/: Image.cpp  Image.h
src/Light/: Light.h
src/LightRecord/: LightRecord.h
src/Material/: Material.cpp  Material.h
src/PointLight/: PointLight.cpp  PointLight.h
src/RGB/: RGB.cpp  RGB.h
src/Ray/: Ray.cpp  Ray.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Scene/: Scene.h
src/SpecularMaterial/: SpecularMaterial.cpp  SpecularMaterial.h
src/Sphere/: Sphere.cpp  Sphere.h
src/Surface/: Surface.h
src/SurfaceGroup/: SurfaceGroup.cpp  SurfaceGroup.h
src/Triangle/: Triangle.cpp  Triangle.h
src/Vector2/: Vector2.cpp  Vector2.h
src/Vector3/: Vector3.cpp  Vector3.h
src/ambient_light/: ambient_light.cpp  ambient_light.h
src/camera/: camera.cpp  camera.h
src/hit_record/: hit_record.h
src/image/: image.cpp  image.h
src/light/: light.h
src/material/: material.cpp  material.h
src/point_light/: point_light.cpp  point_light.h
src/ray/: ray.cpp  ray.h
src/renderer/: renderer.cpp  renderer.h
src/rgb/: rgb.cpp  rgb.h
src/scene/: scene.h
src/sphere/: sphere.cpp  sphere.h
src/surface/: surface.h
src/surface_group/: surface_group.cpp  surface_group.h
src/triangle/: triangle.cpp  triangle.h
src/vector2/: vector2.cpp  vector2.h
(+2 files in other folders)
